cmake_minimum_required(VERSION 3.24)
project(ex4)

set(CMAKE_CXX_STANDARD 11)

add_executable(ex4 Mtmchkin.h utilities.h utilities.cpp Player.h Player.cpp Card.cpp Card.h Ninja.h Ninja.cpp Healer.h Healer.cpp Warrior.h Warrior.cpp Well.h Well.cpp Exception.h CardUtilitis.h Barfight.h Barfight.cpp Mana.h Mana.cpp Mtmchkin.cpp Battle.h Dragon.cpp Dragon.h Gremlin.h Gremlin.cpp Deck.h Deck.cpp CardPath.h Treasure.h Treasure.cpp Merchant.h Merchant.cpp Witch.h Witch.cpp)
